# tree-sitter-tcl

./: Cargo.toml  README.md  binding.gyp  package-lock.json  package.json
bindings/node/: binding.cc  index.js  tcl.js  tclsh.js  test.mjs
bindings/rust/: build.rs  lib.rs
common/: scanner.h
tcl/: package.json
tcl/src/: grammar.json  node-types.json  parser.c  scanner.c
tclsh/: package.json
tclsh/queries/: highlights.scm
tclsh/src/: grammar.json  node-types.json  parser.c  scanner.c
