[package]
name = "tree-sitter-tcl"
description = "tcl grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "tcl"]
categories = ["parsing", "text-editors"]
repository = "https://hg.sr.ht/tree-sitter/tree-sitter-tcl"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "common",
  "queries",
  "bindings/rust",
  "tcl/grammar.js",
  "tcl/src",
  "tclsh/grammar.js",
  "tclsh/src",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
